--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@ let countdownStopped = false;
 
 // Array of friend's images (Replace with actual image file paths or URLs)
 const friendImages = [
-    "https://your-username.github.io/your-repository/images/friend1.jpg",
-    "https://your-username.github.io/your-repository/images/friend2.jpg",
-    "https://your-username.github.io/your-repository/images/friend3.jpg",
-    "https://your-username.github.io/your-repository/images/friend4.jpg",
-    "https://your-username.github.io/your-repository/images/friend5.jpg",
-    "https://your-username.github.io/your-repository/images/friend6.jpg"
+    "divdub img 1.jpg",
+    "divdub img 2.jpg",
+    "divdub img 3.jpg",
+    "divdub img 4.jpg",
+    "divdub img 5.jpg",
+    "divdub img 6.jpg"
 ];
 
 // Function to create random images on screen
