--- a/index.html
+++ b/index.html
@@ -237,19 +237,43 @@ function createRandomImage() {
 
 // Function to start collage effect
 function startCollageEffect() {
+    let shuffledImages = [...friendImages].sort(() => Math.random() - 0.5); // Shuffle images
     let imageCount = 0;
-    const totalImages = 6; // Adjust as needed
 
     function addImage() {
-        if (imageCount < totalImages) {
-            createRandomImage();
+        if (imageCount < shuffledImages.length) {
+            createRandomImage(shuffledImages[imageCount]); // Use shuffled images
             imageCount++;
             setTimeout(addImage, 800); // Adjust time delay between images
         }
     }
 
-    addImage(); // Start adding images
+    addImage();
 }
+
+// Modify createRandomImage() to accept a specific image
+function createRandomImage(imageSrc) {
+    const img = document.createElement("img");
+    img.src = imageSrc; // Use the passed image source
+    img.style.position = "absolute";
+    img.style.width = "200px";
+    img.style.height = "200px";
+    img.style.borderRadius = "10px";
+
+    // Random positioning
+    const maxX = window.innerWidth - 120;
+    const maxY = window.innerHeight - 120;
+    img.style.left = Math.random() * maxX + "px";
+    img.style.top = Math.random() * maxY + "px";
+
+    document.body.appendChild(img);
+
+    // Fade-in effect
+    img.style.opacity = "0";
+    img.style.transition = "opacity 1s ease-in-out";
+    setTimeout(() => (img.style.opacity = "1"), 100);
+}
+
 
 // Countdown Timer Function
 function updateCountdown() {
