--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
     <!-- Modal Popup -->
     <div id="modal" class="modal">
         <div class="modal-content">
-            <h2>Happiest Birthday to my Pookie</h2>
-            <p>Thank you for staying during my ups and downs!</p>
+            <h2>Happiest Birthday my nigga🎀</h2>
+            <p>Enjoy your 21st birthday, keep grinding, keep hustling, Also grateful to have you by my side,during my ups and downs UP nigga💪🏻</p>
             <button id="awwButton">Aww</button>
         </div>
     </div>
